force-app/main/default/objects/ManageContactAndUserIds__c/ManageContactAndUserIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ManageContactAndUserIds</description>
    <label>ManageContactAndUserIds</label>
</CustomObject>