force-app/main/default/objects/ManageContactAndUserIds__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>Contact Id</description>
    <inlineHelpText>Contact Id</inlineHelpText>
    <label>Contact Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>