force-app/main/default/objects/ManageContactAndUserIds__c/fields/User_Id_del__c.field-meta.xml
<CustomField>
    <fullName>User_Id_del__c</fullName>
    <label>User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>